[package]
name = "output"
version = "0.1.0"
edition = "2021"

[lib]
name = "graphcluster"
path = "src/graphcluster.rs"

[[bin]]
name = "output"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.1"
petgraph = "0.6.3"
rand = "0.8.5"
